# riverdi-eve

./: CMakeLists.txt  Makefile.linux  README.md  riverdi-demo.c
app_layer/: App_Common.c
eve_layer/: Gpu_Hal.c
host_layer/linux/: platform.c  platform.h
riverdi_modules/: modules.h
